--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -66,4 +66,8 @@
   <session-config>
 	<session-timeout>30</session-timeout>
   </session-config>
+  <error-page>
+    <error-code>403</error-code>
+    <location>/WEB-INF/jsp/accessDenied.jsp</location>
+</error-page>
 </web-app>
